tests/programs/type-errors/type_mismatch.rice
fn main() {
  let x = "" in
  1 + x; ()
}